--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="row align-items-center d-flex flex-md-wrap">
           <div class="col-md-6 col-sm-12" data-aos="fade-right" data-aos-duration="800">
             <h1 class="fw-bold mb-4 fs-lg-5">Learn to Cook<br />Like a Pro at Home</h1>
-            <p class="mb-4 text-muted fs-lg-5 fs-md-5 fs-sm-6">
+            <p class="mb-4 text-muted fs-lg-4 fs-md-5 fs-sm-6 pe-lg-4 p-0">
               Master 50+ delicious recipes in just 30 days — perfect for
               beginners and home cooks.
             </p>
@@ -86,7 +86,7 @@
           <div class="col-lg-6 col-md-6 col-sm-12" data-aos="fade-left" data-aos-delay="200">
             <h2 class="section-title mb-1">Meet Your Chef</h2>
             <span class="fw-bold mb-4 chef-name">Chef Ali Mirza Sheikh</span>
-            <p class="mb-4 text-muted fs-lg-5 fs-md-5 fs-sm-6">
+            <p class="mb-4 text-muted fs-lg-4 fs-md-5 fs-sm-6">
               Chef Ali Mirza Sheikh is a celebrated culinary artist with over 20
               years of experience in Michelin-starred restaurants globally. His
               innovative approach to traditional cuisine has earned him
@@ -234,7 +234,7 @@
                   <img src="./Images/Point 1.svg" alt="Point 1" class="point-icon" />
                 </div>
                 <div class="flex-grow-1" style="max-width: 500px">
-                  <div class="accordion-item">
+                  <div class="accordion-item ">
                     <h2 class="accordion-header">
                       <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                         Week 1: Knife Skills & Kitchen Confidence
