--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <div class="accordion ali timeline-wrapper" id="curriculumAccordion">
               <!-- Week 1 -->
               <div class="accordion-row d-flex align-items-start mb-4" data-aos="fade-up" data-aos-delay="100">
-                <div class="pt-2 me-3">
+                <div class="pt-2">
                   <img src="./Images/Point 1.svg" alt="Point 1" class="point-icon" />
                 </div>
                 <div class="flex-grow-1" style="max-width: 500px">
@@ -252,7 +252,7 @@
 
               <!-- Week 2 -->
               <div class="accordion-row d-flex align-items-start mb-4" data-aos="fade-up" data-aos-delay="200">
-                <div class="pt-2 me-3">
+                <div class="pt-2">
                   <img src="./Images/Point 2.svg" alt="Point 2" class="point-icon" />
                 </div>
                 <div class="flex-grow-1" style="max-width: 500px">
@@ -274,7 +274,7 @@
 
               <!-- Week 3 -->
               <div class="accordion-row d-flex align-items-start mb-4" data-aos="fade-up" data-aos-delay="300">
-                <div class="pt-2 me-3">
+                <div class="pt-2">
                   <img src="./Images/Point 3.svg" alt="Point 3" class="point-icon" />
                 </div>
                 <div class="flex-grow-1" style="max-width: 500px">
@@ -296,7 +296,7 @@
 
               <!-- Week 4 -->
               <div class="accordion-row d-flex align-items-start mb-4" data-aos="fade-up" data-aos-delay="400">
-                <div class="pt-2 me-3">
+                <div class="pt-2">
                   <img src="./Images/Point 4.svg" alt="Point 4" class="point-icon" />
                 </div>
                 <div class="flex-grow-1" style="max-width: 500px">
@@ -482,7 +482,7 @@
         <div class="d-flex justify-content-between align-items-center flex-wrap">
           <!-- Footer Logo -->
           <div class="footer-logo fw-bold fs-4">
-            <a href=""><img src="./Images/Footer Logo.svg" alt="" /></a>
+            <a href=""><img src="./Images/Footer Logo.svg" class="w-sm-60 w-md-100" alt="footerlogo" /></a>
           </div>
 
           <!-- Footer Navigation -->
